<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:local="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Verify Email"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:gravity="center"
                    android:padding="@dimen/dp_5"
                    android:text="@string/label_otp_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editbox_height"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_15"
                    android:ellipsize="end"
                    android:hint="@string/label_otp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_gray" />


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSendOtp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inputLayEmail"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/btn_round_bg"
                    android:text="@string/label_verify"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnReSendOtp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/label_resend_otp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnChangeEmail"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/label_change_email"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
