<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_btnNoAccount"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_5"
        android:gravity="right|center_vertical"
        android:text="@string/label_dont_account"
        android:textAllCaps="false"
        android:textColor="@color/dark_gray"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_btnNoAccount"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/log_editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editbox_height"
                    android:hint="@string/label_email"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/gray_100" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/log_editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editbox_height"
                    android:hint="@string/label_password"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="textPassword"
                    android:textColorHint="@color/gray_100" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/btn_round_bg"
                android:text="Login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btnForgot"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btnLogin"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:text="@string/label_forgot_pass"
                android:textAllCaps="false"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>